swen430as1/tests/invalid/foreach/ForEach_Invalid_06.while
int[] g(int x) {
    return [x];    
}

int f() {
    int x = 0;
    for(int item : g(item)) {
	x = x + item;
    }
    return item;
}
